@@ -1,8 +1,8 @@
 plugins {
     id 'java'
+    id 'build-logic-conventions'
     // TODO: centralize
     id 'dev.lukebemish.javac-post-processor' version '0.1.10'
-    id "org.gradlex.extra-java-module-info" version "1.14.2"
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(25)
@@ -22,11 +22,6 @@ repositories {
             includeGroupAndSubgroups("com.mojang")
         }
     }
-}
-
-compileJava {
-    options.javaModuleVersion = project.version.toString()
-    options.javaModuleMainClass = 'dev.lukebemish.larder.Larder'
 }
 
 def dashboardProdDirectory = file("dashboard/dist")
@@ -50,99 +45,6 @@ configurations {
         extendsFrom testDev
         attributes.addAllLater(runtimeClasspath.attributes)
     }
-}
-
-def unspecifiedDeps = [
-    "JSONata4Java": [
-        "com.google.gson",
-        "org.antlr.antlr4.runtime",
-        "org.apache.commons.text"
-    ],
-    "jjwt.api": [
-        "com.fasterxml.jackson.databind"
-    ]
-]
-
-@DisableCachingByDefault(because = "For testing, should not be cached")
-abstract class TestDev extends DefaultTask {
-    @Inject
-    abstract ExecOperations getExecOperations()
-
-    @Inject
-    abstract ProjectLayout getLayout()
-
-    @Inject
-    abstract JavaToolchainService getToolchains()
-
-    @InputFiles
-    abstract ConfigurableFileCollection getModulepath()
-
-    @InputFiles
-    abstract ConfigurableFileCollection getClasspath()
-
-    @Input
-    abstract Property<JavaLauncher> getJavaLauncher()
-
-    @Input
-    abstract MapProperty<String, List<String>> getExtraRequires();
-
-    @Inject
-    TestDev() {
-        javaLauncher.convention(toolchains.launcherFor {
-            it.languageVersion = JavaLanguageVersion.of(25)
-        })
-    }
-
-    @TaskAction
-    void run() {
-        new ProcessBuilder("docker", "compose", "-f", "docker-compose.dev.yml", "up", "--remove-orphans", "--detach")
-            .inheritIO().directory(layout.projectDirectory.asFile).start().waitFor().tap {
-            if (it != 0) throw new RuntimeException("Error starting docker: $it")
-        }
-        execOperations.javaexec {
-            jvmArgs('--module-path', this.modulepath.asPath)
-            extraRequires.get().each {a, deps ->
-                deps.each { dep ->
-                    jvmArgs('--add-modules', dep)
-                    jvmArgs('--add-reads', "$a=$dep")
-                }
-            }
-            classpath(this.classpath)
-            mainModule = "dev.lukebemish.larder"
-            executable = javaLauncher.get().executablePath
-            environment(
-                LARDER_ENV: "dev",
-                LARDER_DB_HOST: "localhost",
-                LARDER_DB_PORT: "5432",
-                LARDER_DB_NAME: "larder",
-                LARDER_DB_USER: "larder",
-                LARDER_DB_PASSWORD: "larder",
-
-                LARDER_HOST: "http://localhost:8786",
-                LARDER_PORT: "8786",
-
-                LARDER_OIDC_ISSUER: "http://localhost:8282/realms/demo",
-                LARDER_OIDC_CLIENT_ID: "larder",
-                LARDER_OIDC_CLIENT_SECRET: "M8MoOUmyzBBgRPvUsoAJcMsBZBpSqcNR",
-
-                LARDER_OIDC_ADDITIONAL_SCOPES: "roles",
-                LARDER_OIDC_ROLE_ADMIN: "\"admin\" in realm_access.roles",
-
-                LARDER_S3_REGION: "",
-                LARDER_S3_ACCESS_KEY_ID: "minioadmin",
-                LARDER_S3_SECRET_ACCESS_KEY: "minioadmin",
-                LARDER_S3_ENDPOINT: "http://localhost:9000",
-
-                LARDER_FILESYSTEM_BACKEND_LOCATIONS: "./dev-filesystem-backends.json"
-            )
-            workingDir = layout.projectDirectory
-        }
-    }
-}
-
-tasks.register("testDev", TestDev) {
-    modulepath.from(configurations.testDevClasspath)
-    extraRequires = unspecifiedDeps
 }
 
 tasks.named("jar", Jar) {
@@ -189,10 +91,64 @@ dependencies {
     testDev(project(":"))
 }
 
-extraJavaModuleInfo {
-    deriveAutomaticModuleNamesFromFileNames = true
+modularize {
+    uses["jjwt.impl"] = [
+        "io.jsonwebtoken.io.Deserializer",
+        "io.jsonwebtoken.io.Serializer"
+    ]
+}
+
+def modulesToAdd = ["jjwt.impl"]
+
+tasks.register("startDevDocker", Exec) {
+    commandLine("docker", "compose", "-f", "docker-compose.dev.yml", "up", "--remove-orphans", "--detach")
+    workingDir = layout.projectDirectory
+    outputs.upToDateWhen { false }
+}
+
+tasks.register("testDev", JavaExec) {
+    environment(
+        LARDER_ENV: "dev",
+        LARDER_DB_HOST: "localhost",
+        LARDER_DB_PORT: "5432",
+        LARDER_DB_NAME: "larder",
+        LARDER_DB_USER: "larder",
+        LARDER_DB_PASSWORD: "larder",
+
+        LARDER_HOST: "http://localhost:8786",
+        LARDER_PORT: "8786",
+
+        LARDER_OIDC_ISSUER: "http://localhost:8282/realms/demo",
+        LARDER_OIDC_CLIENT_ID: "larder",
+        LARDER_OIDC_CLIENT_SECRET: "M8MoOUmyzBBgRPvUsoAJcMsBZBpSqcNR",
+
+        LARDER_OIDC_ADDITIONAL_SCOPES: "roles",
+        LARDER_OIDC_ROLE_ADMIN: "\"admin\" in realm_access.roles",
+
+        LARDER_S3_REGION: "",
+        LARDER_S3_ACCESS_KEY_ID: "minioadmin",
+        LARDER_S3_SECRET_ACCESS_KEY: "minioadmin",
+        LARDER_S3_ENDPOINT: "http://localhost:9000",
+
+        LARDER_FILESYSTEM_BACKEND_LOCATIONS: "./dev-filesystem-backends.json"
+    )
+    workingDir = layout.projectDirectory
+    mainModule = "dev.lukebemish.larder"
+    classpath(configurations.testDevClasspath)
+    javaLauncher = javaToolchains.launcherFor {
+        it.languageVersion = JavaLanguageVersion.of(25)
+    }
+    modulesToAdd.each {
+        jvmArgs("--add-modules", it)
+    }
+    dependsOn tasks.startDevDocker
+    outputs.upToDateWhen { false }
 }
 
 tasks.named('compileJava', JavaCompile) {
     javacPostProcessor.plugins.add('dev.lukebemish.polymorphic-signatures')
+    modularity.inferModulePath = true
+
+    options.javaModuleVersion = project.version.toString()
+    options.javaModuleMainClass = 'dev.lukebemish.larder.Larder'
 }
